public static class GameConstants
{
    public const string SCORE_ID = "score";
    public const string TOTAL_SCORE_ID = "totalScore";
    public const string LEVEL_ID = "level";
    
    public static readonly string PLAYER = $"Player";
    public static readonly string CURSOR = $"Cursor";
    public static readonly string ANIMATION_SPEED = $"speed";
    public static readonly string ANIMATION_DIED = $"died";
    public static readonly string ANIMATION_STATE_MOVE = $"statemove";

    public static readonly string DEFAULT_SCENE = "Game";
}