public static class GameConstants
{
    public static readonly string PLAYER = $"Player";
    public static readonly string CURSOR = $"Cursor";
    public static readonly string ANIMATION_SPEED = $"speed";
    public static readonly string ANIMATION_DIED = $"died";
    public static readonly string ANIMATION_STATE_MOVE = $"statemove";
}